--- a/templates/nginx/nginx-config.yaml
+++ b/templates/nginx/nginx-config.yaml
@@ -31,7 +31,7 @@ data:
       access_log   /dev/stderr  main;
       sendfile     on;
       tcp_nopush   on;
-      resolver {{ default (printf "kube-dns.kube-system.svc.%s" .Values.clusterDomain ) .Values.nginx.config.dnsResolver }};
+      resolver {{ default (printf "kube-dns.kube-system.svc.%s" .Values.clusterDomain ) .Values.nginx.config.dnsResolver }} valid={{ default "10s" .Values.nginx.config.dnsTtl }};
 
       {{- with .Values.nginx.config.httpSnippet }}
       {{ tpl . $ | nindent 6 }}
@@ -68,98 +68,103 @@ data:
         }
 
         {{- if .Values.distributor.enabled }}
+        set $distributor_backend "http://{{ template "cortex.fullname" . }}-distributor.{{ $rootDomain }}";
 
         # Distributor Config
         location = /ring {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-distributor.{{ $rootDomain }}$request_uri;
+          proxy_pass      $distributor_backend$request_uri;
         }
 
         location = /all_user_stats {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-distributor.{{ $rootDomain }}$request_uri;
+          proxy_pass      $distributor_backend$request_uri;
         }
 
         location = /api/prom/push {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-distributor.{{ $rootDomain }}$request_uri;
+          proxy_pass      $distributor_backend$request_uri;
         }
 
         ## New Remote write API. Ref: https://cortexmetrics.io/docs/api/#remote-write
         location = /api/v1/push {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-distributor.{{ $rootDomain }}$request_uri;
+          proxy_pass      $distributor_backend$request_uri;
         }
 
         {{- end }}
 
         {{- if .Values.alertmanager.enabled }}
+        set $alertmanager_backend "http://{{ template "cortex.fullname" . }}-alertmanager.{{ $rootDomain }}";
 
         # Alertmanager Config
         location ~ /api/prom/alertmanager/.* {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-alertmanager.{{ $rootDomain }}$request_uri;
+          proxy_pass      $alertmanager_backend$request_uri;
         }
 
         location ~ /api/v1/alerts {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-alertmanager.{{ $rootDomain }}$request_uri;
+          proxy_pass      $alertmanager_backend$request_uri;
         }
 
         location ~ /multitenant_alertmanager/status {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-alertmanager.{{ $rootDomain }}$request_uri;
+          proxy_pass      $alertmanager_backend$request_uri;
         }
 
         location = /api/prom/api/v1/alerts {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-alertmanager.{{ $rootDomain }}/api/v1/alerts;
+          proxy_pass      $alertmanager_backend/api/v1/alerts;
         }
 
         {{- end }}
 
         {{- if .Values.ruler.enabled }}
+        set $ruler_backend "http://{{ template "cortex.fullname" . }}-ruler.{{ $rootDomain }}";
 
         # Ruler Config
         location ~ /api/v1/rules {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-ruler.{{ $rootDomain }}$request_uri;
+          proxy_pass      $ruler_backend$request_uri;
         }
 
         location ~ /ruler/ring {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-ruler.{{ $rootDomain }}$request_uri;
+          proxy_pass      $ruler_backendrequest_uri;
         }
 
         location ~ /api/prom/rules {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-ruler.{{ $rootDomain }}$request_uri;
+          proxy_pass      $ruler_backend$request_uri;
         }
 
         {{- end }}
 
         {{- if .Values.configs.enabled }}
+        set $configs_backend "http://{{ template "cortex.fullname" . }}-configs.{{ $rootDomain }}";
 
         # Config Config
         location ~ /api/prom/configs/.* {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-configs.{{ $rootDomain }}$request_uri;
+          proxy_pass      $configs_backend$request_uri;
         }
 
         {{- end }}
 
         {{- if .Values.query_frontend.enabled }}
+        set $query_frontend_backend "http://{{ template "cortex.fullname" . }}-query-frontend.{{ $rootDomain }}";
 
         # Query Config
         location ~ /api/prom/.* {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-query-frontend.{{ $rootDomain }}$request_uri;
+          proxy_pass      $query_frontend_backend$request_uri;
         }
 
         ## New Query frontend APIs as per https://cortexmetrics.io/docs/api/#querier--query-frontend
         location ~ ^{{.Values.config.api.prometheus_http_prefix}}/api/v1/(read|metadata|labels|series|query_range|query) {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-query-frontend.{{ $rootDomain }}$request_uri;
+          proxy_pass      $query_frontend_backend$request_uri;
         }
 
         location ~ {{.Values.config.api.prometheus_http_prefix}}/api/v1/label/.* {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-query-frontend.{{ $rootDomain }}$request_uri;
+          proxy_pass      $query_frontend_backend$request_uri;
         }
 
         {{- end }}
 
-        {{- if and (.Values.config.auth_enabled) (.Values.nginx.config.auth_orgs) }}
+        {{- if and (and (.Values.config.auth_enabled) (.Values.nginx.config.auth_orgs)) .Values.distributor.enabled }}
         # Auth orgs
         {{- range $org := compact .Values.nginx.config.auth_orgs | uniq }}
         location = /api/v1/push/{{ $org }} {
           proxy_set_header      X-Scope-OrgID {{ $org }};
-          proxy_pass      http://{{ template "cortex.fullname" $ }}-distributor.{{ $rootDomain }}/api/v1/push;
+          proxy_pass      $distributor_backend/api/v1/push;
         }
         {{- end }}
         {{- end }}
