--- a/templates/store-gateway/store-gateway-statefulset.yaml
+++ b/templates/store-gateway/store-gateway-statefulset.yaml
@@ -133,8 +133,10 @@ spec:
               protocol: TCP
           startupProbe:
             {{- toYaml .Values.store_gateway.startupProbe | nindent 12 }}
+          {{- if .Values.store_gateway.livenessProbe }}
           livenessProbe:
             {{- toYaml .Values.store_gateway.livenessProbe | nindent 12 }}
+          {{- end }}
           readinessProbe:
             {{- toYaml .Values.store_gateway.readinessProbe | nindent 12 }}
           resources:
