Set align_queries_with_step to false as default, since the 'querier.align-querier-with-step' is false in the official Cortex docs
Signed-off-by: eduardscaueru <edi_scaueru@yahoo.com>

--- a/values.yaml
+++ b/values.yaml
@@ -111,7 +111,7 @@ config:
       {{- end }}
   query_range:
     split_queries_by_interval: 24h
-    align_queries_with_step: true
+    align_queries_with_step: false
     cache_results: true
     results_cache:
       cache:
