Remove startup probe from compactor
In some circumstances the compactor might take a long time to start and that is not really a bug. For example when there is a high number of partial blocks to read.

--- a/values.yaml
+++ b/values.yaml
@@ -1,4 +1,3 @@
-image:
   repository: quay.io/cortexproject/cortex
   # -- Allows you to override the cortex version in this chart. Use at your own risk.
   tag: ""
@@ -1548,14 +1547,7 @@ compactor:
     # whenDeleted: Retain
     # whenScaled: Retain
 
-  startupProbe:
-    failureThreshold: 60
-    initialDelaySeconds: 120
-    periodSeconds: 30
-    httpGet:
-      path: /ready
-      port: http-metrics
-      scheme: HTTP
+  startupProbe: {}
   livenessProbe: {}
   readinessProbe:
     httpGet:
