--- a/values.yaml
+++ b/values.yaml
@@ -1029,6 +1029,7 @@ query_scheduler:
 overrides_exporter:
   # -- https://cortexmetrics.io/docs/guides/overrides-exporter/
   enabled: false
+  replicas: 1
 
   service:
     annotations: {}
@@ -1068,7 +1069,7 @@ overrides_exporter:
                 - key: app.kubernetes.io/component
                   operator: In
                   values:
-                    - query-scheduler
+                    - overrides-exporter
             topologyKey: 'kubernetes.io/hostname'
 
   annotations: {}
@@ -1101,6 +1102,9 @@ overrides_exporter:
   terminationGracePeriodSeconds: 180
 
   tolerations: []
+
+  podDisruptionBudget:
+    maxUnavailable: 30%
 
   initContainers: []
   extraContainers: []
