--- a/templates/query-scheduler/query-scheduler-dep.yaml
+++ b/templates/query-scheduler/query-scheduler-dep.yaml
@@ -23,11 +23,7 @@ spec:
         {{- toYaml . | nindent 8 }}
         {{- end }}
       annotations:
-      {{- if .Values.useExternalConfig }}
-        checksum/config: {{ .Values.externalConfigVersion }}
-      {{- else }}
-        checksum/config: {{ include (print $.Template.BasePath "/secret.yaml") . | sha256sum }}
-      {{- end }}
+        checksum/config: {{ include "cortex.configChecksum" . }}
       {{- with .Values.query_scheduler.podAnnotations }}
         {{- toYaml . | nindent 8 }}
       {{- end }}
