Speed up ci testing by skipping startupProbe in store-gateway
Signed-off-by: Friedrich Gonzalez <1517449+friedrichg@users.noreply.github.com>

--- a/ci/test-sts-values.yaml
+++ b/ci/test-sts-values.yaml
@@ -135,6 +135,7 @@ ruler:
     - name: tmp-test
       mountPath: /tmp-test
 store_gateway:
+  startupProbe: null
   replicas: 1
   extraVolumes:
     - name: tmp-test
