--- a/ci/test-deployment-values.yaml
+++ b/ci/test-deployment-values.yaml
@@ -144,6 +144,7 @@ ruler:
     - name: tmp-test
       mountPath: /tmp-test
 store_gateway:
+  startupProbe: null
   replicas: 1
   extraVolumes:
     - name: tmp-test
